# traits

./: Cargo.toml  README.md
.github/workflows/: cipher.yml
cipher/: Cargo.toml  README.md
cipher/src/: block.rs  lib.rs  stream.rs  stream_core.rs  stream_wrapper.rs
cipher/src/dev/: block.rs
crypto-common/: Cargo.toml
crypto-common/src/: lib.rs
digest/: CHANGELOG.md  Cargo.toml
digest/src/: lib.rs  mac.rs
digest/src/core_api/: ct_variable.rs
kem/: Cargo.toml
