[package]
name = "cipher"
description = "Traits for describing block ciphers and stream ciphers"
version = "0.4.0" # Also update html_root_url in lib.rs when bumping this
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/cipher"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "block-cipher", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
crypto-common = { version = "0.1.2", path = "../crypto-common" }
inout = "0.1"

# optional dependencies
blobby = { version = "0.3", optional = true }

[features]
std = ["crypto-common/std"]
rand_core = ["crypto-common/rand_core"]
dev = ["blobby"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
